Fix image overflow bug.

--- a/app/assets/stylesheets/user/home.sass
+++ b/app/assets/stylesheets/user/home.sass
@@ -1,11 +1,10 @@
 @import "colors"
 
-.camera,
 .temp_section,
 .graph_section,
 .guard_section
   color: $text-color
-  border-radius: 2px
+  border-radius: 4px
   margin-top: 20px
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset
   position: relative
@@ -28,7 +27,10 @@
   background: $red
 
 .video_section
-  width: 100%
   text-align: center
+  margin-top: 20px
+  overflow: hidden
   img
-    width: 100%
+    object-fit: fill
+    border-radius: 4px
+    margin: 0
